@@ -50,6 +50,13 @@ const wxCoord MARGIN = 5;
 // various wxWidgets macros
 // ----------------------------------------------------------------------------
 
+// check that the page index is valid
+#define IS_VALID_PAGE(nPage) ((nPage) < GetPageCount())
+
+// ----------------------------------------------------------------------------
+// event table
+// ----------------------------------------------------------------------------
+
 IMPLEMENT_DYNAMIC_CLASS(wxChoicebook, wxControl)
 IMPLEMENT_DYNAMIC_CLASS(wxChoicebookEvent, wxNotifyEvent)
 
@@ -282,25 +289,36 @@ int wxChoicebook::GetSelection() const
 
 int wxChoicebook::SetSelection(size_t n)
 {
-    wxCHECK_MSG( n < GetPageCount(), wxNOT_FOUND,
-                 _T("invalid page index in wxChoicebook::SetSelection()") );
+    wxCHECK_MSG( IS_VALID_PAGE(n), wxNOT_FOUND,
+                 wxT("invalid page index in wxChoicebook::SetSelection()") );
 
-    const int selOld = m_selection;
+    const int oldSel = m_selection;
 
-    if ( (int)n != m_selection )
+    if ( int(n) != m_selection )
     {
-        if ( m_selection != wxNOT_FOUND )
-            m_pages[m_selection]->Hide();
-        wxWindow *page = m_pages[n];
-        page->SetSize(GetPageRect());
-        page->Show();
+        wxChoicebookEvent event(wxEVT_COMMAND_CHOICEBOOK_PAGE_CHANGING, m_windowId);
+        event.SetSelection(n);
+        event.SetOldSelection(m_selection);
+        event.SetEventObject(this);
+        if ( !GetEventHandler()->ProcessEvent(event) || event.IsAllowed() )
+        {
+            if ( m_selection != wxNOT_FOUND )
+                m_pages[m_selection]->Hide();
 
-        // change m_selection only now to ignore the selection change event
-        m_selection = n;
-        m_choice->Select(n);
+            wxWindow *page = m_pages[n];
+            page->SetSize(GetPageRect());
+            page->Show();
+
+            m_selection = n;
+            m_choice->Select(n);
+
+            // program allows the page change
+            event.SetEventType(wxEVT_COMMAND_CHOICEBOOK_PAGE_CHANGED);
+            (void)GetEventHandler()->ProcessEvent(event);
+        }
     }
 
-    return selOld;
+    return oldSel;
 }
 
 // ----------------------------------------------------------------------------
